# fullstack-boiler

./: .env.sample  .gitignore  Dockerfile  README.md  compose.prod.yml  compose.yml  docker-compose.yml  nginx.conf  pyproject.toml  run.bat  run.py  run.sh
.github/workflows/: tests.yml
backend/: .env.sample  README.md  pyproject.toml  schema.prisma
backend/src/backend/: __init__.py  dependencies.py
backend/src/backend/lib/: config.py  db.py
backend/src/backend/routers/: posts.py  users.py
backend/src/backend/services/: auth_service.py  user_service.py
backend/tests/: test_main.py
frontend/: Dockerfile.dev  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/hooks/: useUser.tsx
frontend/src/components/shared/: Nav.tsx  ProfileDropdown.tsx  UserAvatar.tsx
frontend/src/lib/: types.ts  utils.ts
src/backend/: __init__.py
tests/: conftest.py  test_main.py
